--- a/index.html
+++ b/index.html
@@ -72,17 +72,19 @@
         #loader {
             display: none;
             position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             background: rgba(255, 255, 255, 0.8);
             color: #ff6f61;
             text-align: center;
-            padding-top: 20%;
+            padding: 20px;
             font-size: 20px;
             font-weight: bold;
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
         }
+
     </style>
 </head>
 <body>
