--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     const password = document.getElementById('password').value;
 
                     try {
-                        const response = await fetch('https://0d2d-115-31-154-130.ngrok-free.app/line-chatbot-9a9b0/us-central1/login', {
+                        const response = await fetch('https://08a8-115-31-154-130.ngrok-free.app/line-chatbot-9a9b0/us-central1/login', {
                             method: 'POST',
                             headers: {
                                 'Content-Type': 'application/json'
@@ -156,7 +156,7 @@
                                 const newPassword = document.getElementById('newPassword').value;
 
                                 try {
-                                    const resetResponse = await fetch('https://0d2d-115-31-154-130.ngrok-free.app/line-chatbot-9a9b0/us-central1/savePassword', {
+                                    const resetResponse = await fetch('https://08a8-115-31-154-130.ngrok-free.app/line-chatbot-9a9b0/us-central1/savePassword', {
                                         method: 'POST',
                                         headers: {
                                             'Content-Type': 'application/json'
