--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                             body: JSON.stringify({
                                 employeeId: employeeId,
                                 password: password,
-                                userId: profile.userId
+                                userId: profile.userId // ส่ง userId ไปที่ backend
                             })
                         });
 
