--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ล็อคอิน LIFF</title>
+    <title>ล็อคอินPIA Chat BOt</title>
     <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-firestore-compat.js"></script>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -113,6 +116,20 @@
     </div>
 
     <script>
+        // Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyBoKc95BbIYYGUKk1kyTdaVssnBUspTHaU",
+            authDomain: "line-chatbot-9a9b0.firebaseapp.com",
+            projectId: "line-chatbot-9a9b0",
+            storageBucket: "line-chatbot-9a9b0.appspot.com",
+            messagingSenderId: "345935467167",
+            appId: "1:345935467167:web:bddb3747ee8d905e69c8aa"
+        };
+
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        const db = firebase.firestore();
+
         async function main() {
             await liff.init({ liffId: "2006263670-vXqxqK3k" });
 
@@ -124,73 +141,49 @@
 
                 document.getElementById('loginForm').addEventListener('submit', async (event) => {
                     event.preventDefault();
-                    document.getElementById('loader').style.display = 'block'; // แสดงกราฟฟิกโหลด
+                    document.getElementById('loader').style.display = 'block'; // Show loader
 
                     const employeeId = document.getElementById('employeeId').value;
                     const password = document.getElementById('password').value;
 
                     try {
-                        const response = await fetch('https://1d10-115-31-154-130.ngrok-free.app/line-chatbot-9a9b0/us-central1/login', {
-                            method: 'POST',
-                            headers: {
-                                'Content-Type': 'application/json'
-                            },
-                            body: JSON.stringify({
-                                employeeId: employeeId,
-                                password: password,
-                                userId: profile.userId // ส่ง userId ไปที่ backend
-                            })
-                        });
+                        const userRef = db.collection('users').doc(employeeId);
+                        const userDoc = await userRef.get();
 
-                        const result = await response.text();
-                        document.getElementById('loader').style.display = 'none'; // ซ่อนกราฟฟิกโหลด
+                        if (userDoc.exists && userDoc.data().password === password) {
+                            if (!userDoc.data().isPasswordChanged) {
+                                document.getElementById('login-form').style.display = 'none';
+                                document.getElementById('reset-form').style.display = 'block';
 
-                        if (result.includes("กรุณาตั้งรหัสผ่านใหม่")) {
-                            document.getElementById('login-form').style.display = 'none';
-                            document.getElementById('reset-form').style.display = 'block';
+                                document.getElementById('resetForm').addEventListener('submit', async (event) => {
+                                    event.preventDefault();
+                                    document.getElementById('loader').style.display = 'block'; // Show loader
 
-                            document.getElementById('resetForm').addEventListener('submit', async (event) => {
-                                event.preventDefault();
-                                document.getElementById('loader').style.display = 'block'; // แสดงกราฟฟิกโหลด
+                                    const newPassword = document.getElementById('newPassword').value;
 
-                                const newPassword = document.getElementById('newPassword').value;
-
-                                try {
-                                    const resetResponse = await fetch('https://1d10-115-31-154-130.ngrok-free.app/line-chatbot-9a9b0/us-central1/savePassword', {
-                                        method: 'POST',
-                                        headers: {
-                                            'Content-Type': 'application/json'
-                                        },
-                                        body: JSON.stringify({
-                                            userId: profile.userId,
-                                            employeeId: employeeId,
-                                            newPassword: newPassword
-                                        })
+                                    await userRef.update({
+                                        password: newPassword,
+                                        isPasswordChanged: true,
+                                        userId: profile.userId
                                     });
 
-                                    const resetResult = await resetResponse.text();
-                                    document.getElementById('loader').style.display = 'none'; // ซ่อนกราฟฟิกโหลด
-                                    alert(resetResult);
-
-                                    // ปิด LIFF window เมื่อสำเร็จ
-                                    liff.closeWindow(); 
-                                } catch (error) {
-                                    console.error("Error:", error);
-                                    document.getElementById('loader').style.display = 'none'; // ซ่อนกราฟฟิกโหลด
-                                    alert("เกิดข้อผิดพลาดในการบันทึกรหัสผ่าน");
-                                }
-                            });
-                        } else if (result === "เข้าสู่ระบบสำเร็จ") {
-                            alert("ยินดีต้อนรับเข้าสู่ระบบ");
-                            liff.closeWindow(); // ปิด LIFF window เมื่อสำเร็จ
+                                    document.getElementById('loader').style.display = 'none'; // Hide loader
+                                    alert('รหัสผ่านใหม่ถูกบันทึกแล้ว');
+                                    liff.closeWindow();
+                                });
+                            } else {
+                                alert("ยินดีต้อนรับเข้าสู่ระบบ");
+                                liff.closeWindow();
+                            }
                         } else {
-                            alert(result);
+                            alert('รหัสผ่านไม่ถูกต้อง');
                         }
                     } catch (error) {
                         console.error("Error:", error);
-                        document.getElementById('loader').style.display = 'none'; // ซ่อนกราฟฟิกโหลด
                         alert("เกิดข้อผิดพลาดในการเข้าสู่ระบบ");
                     }
+
+                    document.getElementById('loader').style.display = 'none'; // Hide loader
                 });
             }
         }
