--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ล็อคอิน LIFF</title>
     <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-firestore.js"></script>
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-firestore-compat.js"></script>
+
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -86,7 +88,6 @@
             border-radius: 8px;
             box-shadow: 0 4px 12px rgba(0,0,0,0.1);
         }
-
     </style>
 </head>
 <body>
@@ -126,8 +127,8 @@
         };
 
         // Initialize Firebase
-        const app = firebase.initializeApp(firebaseConfig);
-        const db = firebase.firestore(app);
+        firebase.initializeApp(firebaseConfig);
+        const db = firebase.firestore();
 
         async function main() {
             await liff.init({ liffId: "2006263670-vXqxqK3k" });
@@ -140,45 +141,71 @@
 
                 document.getElementById('loginForm').addEventListener('submit', async (event) => {
                     event.preventDefault();
-                    document.getElementById('loader').style.display = 'block'; // Show loader
+                    document.getElementById('loader').style.display = 'block'; // Show loading graphic
 
                     const employeeId = document.getElementById('employeeId').value;
                     const password = document.getElementById('password').value;
 
                     try {
-                        const userRef = db.collection("users").doc(employeeId);
-                        const userDoc = await userRef.get();
+                        const response = await fetch('https://1d10-115-31-154-130.ngrok-free.app/line-chatbot-9a9b0/us-central1/login', {
+                            method: 'POST',
+                            headers: {
+                                'Content-Type': 'application/json'
+                            },
+                            body: JSON.stringify({
+                                employeeId: employeeId,
+                                password: password,
+                                userId: profile.userId // Send userId to backend
+                            })
+                        });
 
-                        if (userDoc.exists && userDoc.data().password === password) {
-                            if (!userDoc.data().userId) {  // ตรวจสอบว่า userId ยังว่างอยู่
-                                document.getElementById('login-form').style.display = 'none';
-                                document.getElementById('reset-form').style.display = 'block';
+                        const result = await response.text();
+                        document.getElementById('loader').style.display = 'none'; // Hide loading graphic
 
-                                document.getElementById('resetForm').addEventListener('submit', async (event) => {
-                                    event.preventDefault();
-                                    document.getElementById('loader').style.display = 'block'; // Show loader
+                        if (result.includes("กรุณาตั้งรหัสผ่านใหม่")) {
+                            document.getElementById('login-form').style.display = 'none';
+                            document.getElementById('reset-form').style.display = 'block';
 
-                                    const newPassword = document.getElementById('newPassword').value;
+                            document.getElementById('resetForm').addEventListener('submit', async (event) => {
+                                event.preventDefault();
+                                document.getElementById('loader').style.display = 'block'; // Show loading graphic
 
-                                    await userRef.update({
-                                        password: newPassword,
-                                        userId: profile.userId  // บันทึก userId ของผู้ใช้ที่ล็อคอิน
+                                const newPassword = document.getElementById('newPassword').value;
+
+                                try {
+                                    const resetResponse = await fetch('https://1d10-115-31-154-130.ngrok-free.app/line-chatbot-9a9b0/us-central1/savePassword', {
+                                        method: 'POST',
+                                        headers: {
+                                            'Content-Type': 'application/json'
+                                        },
+                                        body: JSON.stringify({
+                                            userId: profile.userId,
+                                            employeeId: employeeId,
+                                            newPassword: newPassword
+                                        })
                                     });
 
-                                    document.getElementById('loader').style.display = 'none'; // Hide loader
-                                    alert('รหัสผ่านใหม่ถูกบันทึกแล้ว');
-                                    liff.closeWindow();
-                                });
-                            } else {
-                                alert("ยินดีต้อนรับเข้าสู่ระบบ");
-                                liff.closeWindow();
-                            }
+                                    const resetResult = await resetResponse.text();
+                                    document.getElementById('loader').style.display = 'none'; // Hide loading graphic
+                                    alert(resetResult);
+
+                                    // Close LIFF window when successful
+                                    liff.closeWindow(); 
+                                } catch (error) {
+                                    console.error("Error:", error);
+                                    document.getElementById('loader').style.display = 'none'; // Hide loading graphic
+                                    alert("เกิดข้อผิดพลาดในการบันทึกรหัสผ่าน");
+                                }
+                            });
+                        } else if (result === "เข้าสู่ระบบสำเร็จ") {
+                            alert("ยินดีต้อนรับเข้าสู่ระบบ");
+                            liff.closeWindow(); // Close LIFF window when successful
                         } else {
-                            alert('รหัสผ่านไม่ถูกต้อง');
+                            alert(result);
                         }
                     } catch (error) {
                         console.error("Error:", error);
-                        document.getElementById('loader').style.display = 'none'; // Hide loader
+                        document.getElementById('loader').style.display = 'none'; // Hide loading graphic
                         alert("เกิดข้อผิดพลาดในการเข้าสู่ระบบ");
                     }
                 });
