--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     const password = document.getElementById('password').value;
 
                     try {
-                        const response = await fetch('https://1d10-115-31-154-130.ngrok-free.app/line-chatbot-9a9b0/us-central1/login', {
+                        const response = await fetch('https://login-buwmtfkuia-uc.a.run.app', {
                             method: 'POST',
                             headers: {
                                 'Content-Type': 'application/json'
@@ -173,7 +173,7 @@
                                 const newPassword = document.getElementById('newPassword').value;
 
                                 try {
-                                    const resetResponse = await fetch('https://1d10-115-31-154-130.ngrok-free.app/line-chatbot-9a9b0/us-central1/savePassword', {
+                                    const resetResponse = await fetch('https://savepassword-buwmtfkuia-uc.a.run.app', {
                                         method: 'POST',
                                         headers: {
                                             'Content-Type': 'application/json'
